TAG: lib_java_core-maint6300-BP
DATE: 01/20/2005
STAFF: pf

TAG: lib_java_core-tr3007-BP
DATE: 01/04/2005
STAFF: mbw

TAG:lib_java_core-tr5939-BP
DATE: 12/20/2004
STAFF: mbw

TAG:lib_java_core-tr6427-BP
DATE: 12/20/2004
STAFF: mbw

TAG:lib_java_core-3-1-0-1
DATE: 12/17/2004
STAFF: mbw
no change

TAG:lib_java_core-3-1-1
DATE: 12/16/2004
STAFF: mbw
CHANGES: merged assembly branch onto trunk

TAG:lib_java_core-assembly-2
DATE: 12/02/2004
STAFF: mbw
CHANGES: now supports double precision instead of single

TAG:lib_java_core-assembly-1
DATE: 12/02/2004
STAFF: mbw
CHANGES: 1) bug fix in Configuration class: now throws exception when it cannot resolve a configuration parameter
         2) continued initial development of TestManager

TAG:lib_java_core-assembly-BP
DATE: 12/02/2004
STAFF: mbw

TAG:lib_java_core-1-0-31
DATE: 11/05/2004
STAFF: mbw
CHANGES: tagged to include changes Josh made to the DTOConstants class

TAG:lib_java_core-1-0-30
DATE: 11/04/2004
STAFF: mbw
CHANGES: see changes since last tag

DATE: 10/26/2004
STAFF: mbw
CHANGES: added new functionality to the unit testing class TestManager

TAG:lib_java_core-1-0-29
DATE: 10/22/2004
STAFF: mbw
CHANGES: BindableStatement now checks the DBDEBUG parameter to see if it should log sql

TAG:lib_java_core-1-0-28
DATE: 10/12/2004
STAFF: mbw
CHANGES: removed additional debug statements from the RecordDataReader class

TAG:lib_java_core-1-0-27
DATE: 10/12/2004
STAFF: mbw
CHANGES: see changes since last tag

DATE: 10/12/2004
STAFF: mbw
CHANGES: removed debug statements from the RecordDataReader class
         setting isDebug instance variable to false during initialization (was setting true)

TAG:lib_java_core-1-0-26
DATE: 10/11/2004
STAFF: mbw
CHANGES: the ScriptWriter now logs script command before execution

TAG:lib_java_core-1-0-25
DATE: 10/11/2004
STAFF: mbw
CHANGES:
1) added a getKeys() method to ConfigurationManager
2) added the methods to obtain float values from the configuration