@@ -1,3 +1,8 @@
+TAG: lib_java_core-3-1-1-1
+DATE: 01/26/2005
+STAFF: pf
+CHANGES: merge maint6300 to trunk
+
 TAG: lib_java_core-maint6300-BP
 DATE: 01/20/2005
 STAFF: pf
